--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.0",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.20",
 		"react": "^17.0.1",
-		"react-dom": "^17.0.1"
+		"react-dom": "^17.0.1",
+		"validator": "^13.5.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.10",
@@ -21,7 +26,12 @@
 		"@babel/preset-env": "^7.12.11",
 		"@babel/preset-react": "^7.12.10",
 		"babel-loader": "^8.2.2",
+		"css-loader": "^5.0.1",
+		"mini-css-extract-plugin": "^1.3.5",
 		"nodemon": "^2.0.7",
+		"sass": "^1.32.5",
+		"sass-loader": "^10.1.1",
+		"style-loader": "^2.0.0",
 		"webpack": "^5.18.0",
 		"webpack-cli": "^4.4.0",
 		"webpack-dev-middleware": "^4.1.0",
