--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"webpack": "^5.18.0",
 		"webpack-cli": "^4.4.0",
 		"webpack-dev-middleware": "^4.1.0",
-		"webpack-dev-server": "^3.11.2"
+		"webpack-dev-server": "^3.11.2",
+		"webpack-hot-middleware": "^2.25.0"
 	}
 }
