--- a/package.json
+++ b/package.json
@@ -2,40 +2,48 @@
 	"name": "mern-forms",
 	"version": "1.0.0",
 	"description": "",
-	"main": "webpack.config.js",
+	"main": "index.js",
 	"scripts": {
-		"start": "nodemon --watch server --exec babel-node -- server/index.js",
-		"client": "webpack-dev-server --progress"
+		"start": "node server/index.js --production",
+		"start-dev": "nodemon --watch server --exec babel-node -- server/index.js",
+		"client": "webpack serve --mode development",
+		"build": "webpack --mode production"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"bcrypt": "^5.0.0",
-		"dotenv": "^8.2.0",
+		"bcrypt": "^5.0.1",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
-		"lodash": "^4.17.20",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"validator": "^13.5.2"
+		"knex": "^0.95.6",
+		"lodash": "^4.17.21",
+		"mysql": "^2.18.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"slugify": "^1.5.3",
+		"sqlite3": "^5.0.2",
+		"validator": "^13.6.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.10",
-		"@babel/node": "^7.12.10",
-		"@babel/preset-env": "^7.12.11",
-		"@babel/preset-react": "^7.12.10",
+		"@babel/core": "^7.14.5",
+		"@babel/node": "^7.14.5",
+		"@babel/preset-env": "^7.14.5",
+		"@babel/preset-react": "^7.14.5",
 		"babel-loader": "^8.2.2",
-		"css-loader": "^5.0.1",
-		"mini-css-extract-plugin": "^1.3.5",
+		"css-loader": "^5.2.6",
+		"file-loader": "^6.2.0",
+		"mini-css-extract-plugin": "^1.6.0",
 		"nodemon": "^2.0.7",
-		"sass": "^1.32.5",
-		"sass-loader": "^10.1.1",
+		"sass": "^1.34.1",
+		"sass-loader": "^12.0.0",
 		"style-loader": "^2.0.0",
-		"webpack": "^5.18.0",
-		"webpack-cli": "^4.4.0",
-		"webpack-dev-middleware": "^4.1.0",
+		"webpack": "^5.38.1",
+		"webpack-cli": "^4.7.2",
+		"webpack-dev-middleware": "^5.0.0",
 		"webpack-dev-server": "^3.11.2",
-		"webpack-hot-middleware": "^2.25.0"
+		"webpack-hot-middleware": "^2.25.0",
+		"yargs": "^12.0.5"
 	}
 }
