--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"bookshelf": "^1.2.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
@@ -34,6 +35,8 @@
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.2.6",
 		"file-loader": "^6.2.0",
+		"html-loader": "^3.1.0",
+		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^1.6.0",
 		"nodemon": "^2.0.7",
 		"sass": "^1.34.1",
